wallet endpoints - done
